--- a/chasin-tails-menu/package.json
+++ b/chasin-tails-menu/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
     "serve": "^6.5.0",
+    "shortid": "^2.2.8",
     "stylus": "0.54.5"
   },
   "scripts": {
